--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="icon" type="image/png" href="/eme-icon.png">
+  
+
+  </style>
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
